# Mila---Chatbot

./: README.md
project/: .gitignore  pyproject.toml
project/controller/: __init__.py  auth_controller.py  chat_controller.py
project/migrations/versions/: ca1c7c75f1bd_.py
project/model/: __init__.py  db.py  review.py  summary.py  user.py
project/view/: app.py  config.py  routes.py
project/view/templates/: register.html
